--- a/ch4.ipynb
+++ b/ch4.ipynb
@@ -16,6 +16,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/yugi/.matplotlib'"
+      ]
+     },
+     "execution_count": 359,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib as mpl\n",
+    "mpl.get_configdir()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
